# AI-Customer-Support-Dashboard

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  advanced_training.py  api.py  app.py  data_preprocessing.py  demo.py  docker-compose.yml  explainability.py  pyproject.toml  requirements.txt  run_dashboard.bat  setup.py  train_models.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
data/: category_data.pkl  priority_data.pkl  sample_tickets.csv
models/: category_encoder.pkl  category_model.pkl  model_metrics.json  priority_encoder.pkl  priority_model.pkl  tfidf_vectorizer.pkl
tests/: __init__.py  test_main.py
