[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-customer-support-dashboard"
version = "1.0.0"
description = "AI-powered customer support ticket prioritization and analytics dashboard"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "AI Support Team"},
]
keywords = ["machine-learning", "customer-support", "nlp", "streamlit", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "streamlit>=1.28.1",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.3",
    "numpy>=1.24.3",
    "nltk>=3.8.1",
    "plotly>=5.15.0",
    "joblib>=1.3.2",
]

[project.urls]
Homepage = "https://github.com/Ay1932/AI-Customer-Support-Dashboard"
Repository = "https://github.com/Ay1932/AI-Customer-Support-Dashboard"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]